[package]
name = "evileye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
fuzzy-matcher = "0.3.7"
image = "0.25.1"
lexopt = "0.3.0"
ocrs = "0.8.0"
rayon = "1.10.0"
regex = "1.10.5"
rten = "0.10.0"
rten-tensor = "0.10.0"
walkdir = "2.5.0"
